# geom

./: .gitmodules  CMakeLists.txt  Diary.md
include/geom/: primitives2d.hpp
src/: main.cpp  primitives2d.cpp
tests/: test_closest_point.cpp
